<resources>
    <string name="app_name">testsuitmedia</string>
    <string name="email_error">Email is invalid</string>
    <string name="enter_palindrome">palindrome</string>
    <string name="name">Name</string>
    <string name="check">check</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_user">Choose a User</string>
    <string name="no_user">There is no user!</string>
    <string name="email">email</string>
    <string name="retry">Retry</string>
</resources>